--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.25.0",
     "base64": "^2.1.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "socket.io": "^4.8.1"
   }
 }
