--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "@azure/storage-blob": "^12.25.0",
     "base64": "^2.1.0",
+    "delaunator": "^5.0.1",
+    "file-saver": "^2.0.5",
+    "luxon": "^3.5.0",
     "pg": "^8.12.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "three": "^0.150.1"
   }
 }
